--- a/pdftoimg.html
+++ b/pdftoimg.html
@@ -54,11 +54,12 @@
 
                 <div id="images"></div>
 
-                </div>
               </div>
             </div>
           </div>
-  </body>
+      </form>
+    </div>
+</body>
 
 <br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br>
 <footer>
