--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <button onclick="location.href='imgConvert.html'">
           <img class="iconz" src="Images/img_converter.png" >
             <h3>Convert image format</h3>
-            <p class="showDes">Change an Image format to either PNG, JPEG or JPG</p>
+            <p>Change an Image format to either PNG, JPEG or JPG</p>
         </button>
       </div>
 
@@ -42,7 +42,7 @@
         <button onclick="location.href='crop.html'">
           <img class="iconz" src="Images/Crop.png" >
             <h3>Crop Image</h3>
-            <p class="showDes">Crop JPG, JPEG or PNG images</p>
+            <p>Crop JPG, JPEG or PNG images</p>
         </button>
       </div>
 
@@ -50,7 +50,7 @@
         <button onclick="location.href='draw.html'">
           <img class="iconz" src="Images/Draw.png" >
             <h3>Draw on Image</h3>
-            <p class="showDes">Draw on an image with different line width, shapes and colours</p>
+            <p>Draw on an image with different line width, shapes and colours</p>
         </button>
       </div>
 
@@ -58,7 +58,7 @@
         <button onclick="location.href='resize.html'">
           <img class="iconz" src="Images/resize.png" >
             <h3>Resize Image</h3>
-            <p class="showDes">Adjust the width and height of an Image</p>
+            <p>Adjust the width and height of an Image</p>
         </button>
       </div>
 
@@ -66,7 +66,7 @@
         <button onclick="location.href='imagetuning.html'">
           <img class="iconz" src="Images/tuning.png" >
             <h3>Image tuning</h3>
-            <p class="showDes">Adjust brightness and contrast of an image</p>
+            <p>Adjust brightness and contrast of an image</p>
         </button>
       </div>
 
@@ -74,7 +74,7 @@
         <button onclick="location.href='text.html'">
           <img class="iconz" src="Images/Text.png" >
             <h3>Add Text to Image</h3>
-            <p class="showDes">Add text of different fonts, text size and colours to an image</p>
+            <p>Add text of different fonts, text size and colours to an image</p>
         </button>
       </div>
 
@@ -82,7 +82,7 @@
         <button onclick="location.href='convertfile2pdf.html'">
           <img class="iconz" src="Images/Convertpdf.png" >
             <h3>Image to PDF</h3>
-            <p class="showDes">Convert an image to PDF</p>
+            <p>Convert an image to PDF</p>
         </button>
       </div>
       
@@ -90,7 +90,7 @@
         <button onclick="location.href='imgembedpdf.html'">
           <img class="iconz" src="Images\Embed.png" >
             <h3>Image Embed with PDF</h3>
-            <p class="showDes">Embed an image into a PDF file</p>
+            <p>Embed an image into a PDF file</p>
         </button>
       </div>
 
@@ -98,7 +98,7 @@
         <button onclick="location.href='extractpdf.html'">
           <img class="iconz" src="Images/Extract.png" >
             <h3>Extract PDF</h3>
-            <p class="showDes">Extract pages from a PDF</p>
+            <p>Extract pages from a PDF</p>
         </button>
       </div>
 
@@ -106,7 +106,7 @@
         <button onclick="location.href='flatteningpdf.html'">
           <img class="iconz" src="Images/Flatten.png" >
             <h3>Flatten PDF</h3>
-            <p class="showDes">Flatten the elements and texts in a PDF file</p>
+            <p>Flatten the elements and texts in a PDF file</p>
         </button>
       </div>
 
@@ -114,7 +114,7 @@
         <button onclick="location.href='metadatapdf.html'">
           <img class="iconz" src="Images/Metadata.png" >
             <h3>Metadata PDF</h3>
-            <p class="showDes">Read or write to hidden data of a PDF file</p>
+            <p>Read or write to hidden data of a PDF file</p>
         </button>
       </div>
 
@@ -122,7 +122,7 @@
         <button onclick="location.href='mergepdf.html'">
           <img class="iconz" src="Images/Merge.png" >
             <h3>Merge PDF</h3>
-            <p class="showDes">Combine two PDF files into one PDF file</p>
+            <p>Combine two PDF files into one PDF file</p>
         </button>
       </div>      
 
@@ -130,7 +130,7 @@
         <button onclick="location.href='pdftoimg.html'">
           <img class="iconz" src="Images\pdftoimg.png" >
             <h3>PDF to Image</h3>
-            <p class="showDes">Convert a PDF into Images</p>
+            <p>Convert a PDF into Images</p>
         </button>
       </div>
 
@@ -138,7 +138,7 @@
         <button onclick="location.href='removepagepdf.html'">
           <img class="iconz" src="Images/Remove.png" >
             <h3>Remove PDF</h3>
-            <p class="showDes">Remove any amount of pages from a PDF</p>
+            <p>Remove any amount of pages from a PDF</p>
         </button>
       </div>
 
@@ -146,7 +146,7 @@
         <button onclick="location.href='separatepdf.html'">
           <img class="iconz" src="Images/Separate.png" >
             <h3>Separate PDF</h3>
-            <p class="showDes">Separate one or several pages from one PDF file to make two separate PDF files</p>
+            <p>Separate one or several pages from one PDF file to make two separate PDF files</p>
         </button>
       </div>      
     </div>
