--- a/imgembedpdf.html
+++ b/imgembedpdf.html
@@ -24,53 +24,44 @@
     </div>
 </header>
 
-  <br></br>
-  <br></br>
-  <br></br>
+<br></br><br></br><br></br>
   
 <body>
   <div class="wall" align="center">
-      <form action="/">
-          <div id="paper"></div>
-            <div class="poster">
-                <h2>Import your PDF and image</h2>
+    <div id="paper"></div>
+      <div class="poster">
+        <h2>Import your PDF and image</h2>
 
-                <div class="drop_area">
-                  <h4>Drag & Drop your PDF here</h4>
-                </div>
+        <div class="drop_area">
+          <h4>Drag & Drop your PDF here</h4>
+        </div>
   
-                <div class="drop_area2">
-                  <h4>Drag & Drop your image here</h4>
-                </div>
+        <div class="drop_area2">
+          <h4>Drag & Drop your image here</h4>
+        </div>
 
-                <label class="button-87" for="input-file">Import PDF</label>
-                <input type="file" id="input-file" accept=".pdf"><br>
+        <label class="button-87" for="input-file">Import PDF</label>
+        <input type="file" id="input-file" accept=".pdf"><br>
 
-                <label class="button-87" for="input-file2">Import Image</label>
-                <input type="file" id="input-file2" accept="image/*"><br>                
+        <label class="button-87" for="input-file2">Import Image</label>
+        <input type="file" id="input-file2" accept="image/*"><br>                
 
-                <div id="hide" class="hide">
-                <textarea id="filename" rows="4" cols="35" placeholder="Rename the file (or leave it blank)"></textarea>
+        <div id="hide" class="hide">
+        <textarea id="filename" rows="4" cols="35" placeholder="Rename the file (or leave it blank)"></textarea>
 
-                <label class="button-87" onclick="embedimg()">Embed image</label><br>
+        <label class="button-87" onclick="embedimg()">Embed image</label><br>
               
-                <a id="downloadLink" href="#" style="display:none">Download Changed PDF</a>
+        <a id="downloadLink" href="#" style="display:none">Download Changed PDF</a>
 
-                <iframe id="pdf" style="width: 45%; height: 700px;"></iframe>
+        <iframe id="pdf" style="width: 45%; height: 700px;"></iframe>
 
-                <img id="output" style="max-width: 400px; max-height: 400px;" />
+        <img id="output" style="max-width: 400px; max-height: 400px;" />
 
-                <canvas id="canvas" width="0" height="0"></canvas>
+        <canvas id="canvas" width="0" height="0"></canvas>
 
-                </div>
-            </div>
-          </div>
-  </body>
-
-<br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br>
-<footer>
-    <special-footer></special-footer>
-</footer>
+      </div>
+    </div>
+  </div>
 
 <script src="index.js"></script>
 <script src="imgembedpdf.js"></script>
@@ -78,3 +69,13 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.7.1/jszip.min.js"></script>
+
+</body>
+
+<br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br>
+<footer>
+    <special-footer></special-footer>
+</footer>
+
+</html>
+
