--- a/metadatapdf.html
+++ b/metadatapdf.html
@@ -4,10 +4,8 @@
 <html>
   
 <head>
-
 <title>Metadata PDF</title>
 <link rel="stylesheet" type="text/css" href="index.css">
-
 </head>
 
 <header>
@@ -24,40 +22,42 @@
     </div>
 </header>
 
-  <br></br>
-  <br></br>
-  <br></br>
+<br></br><br></br><br></br>
   
 <body>
   <div class="wall" align="center">
-      <form action="/">
-          <div id="paper"></div>
-            <div class="poster">
-                <h2>Import your PDF to read (or write) Metadata</h2>
+    <div id="paper"></div>
+      <div class="poster">
+        <h2>Import your PDF to read (or write) Metadata</h2>
 
-                <div class="drop_area">
-                  <h4>Drag & Drop your PDF here</h4>
-                </div>
+        <div class="drop_area">
+          <h4>Drag & Drop your PDF here</h4>
+        </div>
 
-                <label class="button-87" for="input-file">Import PDF</label>
-                <input type="file" id="input-file" accept=".pdf"><br>
+        <label class="button-87" for="input-file">Import PDF</label>
+        <input type="file" id="input-file" accept=".pdf"><br>
 
-                <div id="hide" class="hide">
-                <ul id="metadata-list"></ul>
-                </div>
+        <div id="hide" class="hide">
+          <ul id="metadata-list"></ul>
+        </div>
                 
-                <label class="button-87" id="savePDFButton" style="display: none;">Set data to PDF</label><br>
-                <a id="downloadLink" href="#" style="display:none">Download PDF</a>
+        <label class="button-87" id="savePDFButton" style="display: none;">Set data to PDF</label><br>
+        <a id="downloadLink" href="#" style="display:none">Download PDF</a>
               
-            </div>
-          </div>
-  </body>
-
-<br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br>
-<footer>
-    <special-footer></special-footer>
-</footer>
+      </div>
+    </div>
+  </div>
 
 <script src="index.js"></script>
 <script src="metadatapdf.js"></script>
 <script src="https://unpkg.com/pdf-lib@1.17.1"></script>
+
+</body>
+
+<br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br>
+
+<footer>
+    <special-footer></special-footer>
+</footer>
+
+</html>
