--- a/imgembedpdf.html
+++ b/imgembedpdf.html
@@ -4,10 +4,8 @@
 <html>
   
 <head>
-
 <title>Embed Images into PDF</title>
 <link rel="stylesheet" type="text/css" href="index.css">
-
 </head>
 
 <header>
@@ -30,6 +28,7 @@
   <div class="wall" align="center">
     <div id="paper"></div>
       <div class="poster">
+        <h1>STILL A WORK IN PROGRESS</h1>
         <h2>Import your PDF and image</h2>
 
         <div class="drop_area">
