--- a/imgConvert.html
+++ b/imgConvert.html
@@ -42,7 +42,7 @@
 
           <div class="upload-img">
             <input type="file" id="imageUpload" accept="image/jpg, image/png, image/jpeg" onchange="displayImage(event)">
-            <label class="button-28" for="imageUpload">Import file</label>
+            <label class="button-87" for="imageUpload">Import Image</label>
             <div id="imageContainer" style="margin-top: 20px;">
                 <img id="output" style="max-width: 1000px; max-height: 3000px;" />
           </div>
