--- a/convertfile2pdf.html
+++ b/convertfile2pdf.html
@@ -41,7 +41,7 @@
   
             <div>
               <input type="file" id="input-file" accept="image/*" onchange="displayImage(event)">
-              <label class="button-87" for="input-file">Select file</label>
+              <label class="button-87" for="input-file">Import Image</label>
               <div  style="margin-top: 20px;">
                   <img id="output" style="max-width: 1000px; max-height: 3000px;" />
               </div>
