--- a/imagetuning.html
+++ b/imagetuning.html
@@ -36,13 +36,13 @@
             </div>
             <div>
                 <input type= "file" id= "input-file" accept= "image/*" onchange= "displayImage(event)">
-                <label class= "button-87" for= "input-file">Select file</label>
+                <label class= "button-87" for= "input-file">Import Image</label>
                 <div  style="margin-top: 20px;">
                     <img id="output" style="max-width: 1000px; max-height: 3000px;" />
                 </div>
             </div>
                 
-        <div class= "hide">
+        <div class="hide">
             <h4>Brightness
             <input type= "range" id= "brightness" min= "0" max= "200" value= "100">
             </h4>
