--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 
       <div class="squarebox">
         <button onclick="location.href='imagetuning.html'">
-          <img class="iconz" src="Images/tuning.png" >
-            <h3>Image tuning</h3>
+          <img class="iconz" src="Images/Tuning.png" >
+            <h3>Image Tuning</h3>
             <p>Adjust brightness and contrast of an image</p>
         </button>
       </div>
