--- a/draw.html
+++ b/draw.html
@@ -97,8 +97,8 @@
                   <div id="clear1">Clear</div>
                 </li>
                 </div>
-                <textarea id="filename" class="hide" rows="4" cols="35" placeholder="Rename the file (or leave it blank)"></textarea>
               </div>
+              <textarea class="rename hide" id="filename" rows="4" cols="35" placeholder="Rename the file (or leave it blank)"></textarea>
               
               <div class="btn">
                 <a href="" id="download" class="hide">Download</a>
