--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <body>
 
-  <div align="center"><div  id="desc"><i>Set of useful tools that processes, edits <b>PDF documents</b> or <b>images</b> on your own browser...</i></div></div>
+  <div align="center"><div  id="desc"><i>Set of useful tools that processes, edits <b style="color:orangered;">PDF documents</b> or <b style="color:orangered;">Images</b> on your own browser, for <b style="color:orange;">privacy</b> in mind...</i></div></div>
 
     <div class="description">
       <div class="squarebox">
@@ -129,7 +129,7 @@
         <button onclick="location.href='pdftoimg.html'">
           <img class="iconz" src="Images\pdftoimg.png" >
             <h3>PDF to Image</h3>
-            <p>Convert a PDF into Images</p>
+            <p>Convert a PDF into Images and also allows for editing</p>
         </button>
       </div>
 
