--- a/draw.html
+++ b/draw.html
@@ -98,6 +98,8 @@
                 </li>
                 </div>
               </div>
+              <div id="desc" style="font-size: smaller;" align="center">Disclaimer: the rename function won't work after you start drawing</div>
+              
               <textarea class="rename hide" id="filename" rows="4" cols="35" placeholder="Rename the file (or leave it blank)"></textarea>
               
               <div class="btn">
