15/6 rename alert ms

--- a/resize.html
+++ b/resize.html
@@ -59,6 +59,8 @@
                             </li>
                         </ul>
                     </div>
+                    <textarea class="rename hide" id="filename" rows="4" cols="35" placeholder="Rename the file (or leave it blank)"></textarea>
+                    
                     <div class="btn">
                         <a href="" id="download" class="hide">Download</a>
                     </div>
