--- a/text.html
+++ b/text.html
@@ -119,6 +119,8 @@
                             </li>
                         </div>
                     </div>
+                    <textarea class="rename hide" id="filename" rows="4" cols="35" placeholder="Rename the file (or leave it blank)"></textarea>
+                    
                     <div class="btn">
                         <a href="" id="download" class="hide">Download</a>
                     </div>
