--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <button onclick="location.href='crop.html'">
           <img class="iconz" src="Images/Crop.png" >
             <h3>Crop Image</h3>
-            <p>Crop JPG, JPEG or PNG images</p>
+            <p>Crop images to your desired aspect ratio, zoom, and rotate features</p>
         </button>
       </div>
 
@@ -54,18 +54,18 @@
       </div>
 
       <div class="squarebox">
-        <button onclick="location.href='resize.html'">
-          <img class="iconz" src="Images/resize.png" >
-            <h3>Resize Image</h3>
-            <p>Adjust the width and height of an Image</p>
-        </button>
-      </div>
-
-      <div class="squarebox">
         <button onclick="location.href='imagetuning.html'">
           <img class="iconz" src="Images/tuning.png" >
             <h3>Image Tuning</h3>
             <p>Adjust brightness and contrast of an image</p>
+        </button>
+      </div>
+
+      <div class="squarebox">
+        <button onclick="location.href='resize.html'">
+          <img class="iconz" src="Images/resize.png" >
+            <h3>Resize Image</h3>
+            <p>Adjust the width and height of an Image</p>
         </button>
       </div>
 
@@ -82,6 +82,14 @@
           <img class="iconz" src="Images/Convertpdf.png" >
             <h3>Image to PDF</h3>
             <p>Convert an image to PDF</p>
+        </button>
+      </div>
+
+      <div class="squarebox">
+        <button onclick="location.href='pdftoimg.html'">
+          <img class="iconz" src="Images\pdftoimg.png" >
+            <h3>PDF to Image</h3>
+            <p>Convert a PDF into Images and also allows for editing</p>
         </button>
       </div>
       
@@ -110,34 +118,26 @@
       </div>
 
       <div class="squarebox">
-        <button onclick="location.href='metadatapdf.html'">
-          <img class="iconz" src="Images/Metadata.png" >
-            <h3>Metadata PDF</h3>
-            <p>Read or write to hidden data of a PDF file</p>
-        </button>
-      </div>
-
-      <div class="squarebox">
         <button onclick="location.href='mergepdf.html'">
           <img class="iconz" src="Images/Merge.png" >
             <h3>Merge PDF</h3>
             <p>Combine two PDF files into one PDF file</p>
         </button>
-      </div>      
-
-      <div class="squarebox">
-        <button onclick="location.href='pdftoimg.html'">
-          <img class="iconz" src="Images\pdftoimg.png" >
-            <h3>PDF to Image</h3>
-            <p>Convert a PDF into Images and also allows for editing</p>
-        </button>
-      </div>
+      </div>            
 
       <div class="squarebox">
         <button onclick="location.href='removepagepdf.html'">
           <img class="iconz" src="Images/Remove.png" >
             <h3>Remove PDF</h3>
             <p>Remove any amount of pages from a PDF</p>
+        </button>
+      </div>
+
+      <div class="squarebox">
+        <button onclick="location.href='metadatapdf.html'">
+          <img class="iconz" src="Images/Metadata.png" >
+            <h3>Metadata PDF</h3>
+            <p>Read or write to hidden data of a PDF file</p>
         </button>
       </div>
 
