--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <button onclick="location.href='crop.html'">
           <img class="iconz" src="Images/Crop.png" >
             <h3>Crop Image</h3>
-            <p>Crop JPG, JPEG or PNG images</p>
+            <p>Crop images to your desired aspect ratio, zoom, and rotate features</p>
         </button>
       </div>
 
@@ -52,6 +52,7 @@
             <p>Draw on an image with different line width, shapes and colours</p>
         </button>
       </div>
+      
 
       <div class="squarebox">
         <button onclick="location.href='resize.html'">
