--- a/draw.html
+++ b/draw.html
@@ -67,13 +67,13 @@
               <img src="Images/Draw.png" id="icon">                      
             </li>
             <li class="shape" id="line">                      
-              <img src="Images/line.png" id="icon">                      
+              <img src="Images/Line.png" id="icon">                      
             </li>
             <li class="shape" id="rectangle">                   
-              <img src="Images/rectangle.png" id="icon">                     
+              <img src="Images/Rectangle.png" id="icon">                     
             </li>
             <li class="shape" id="circle">                     
-              <img src="Images/circle.png" id="icon">                     
+              <img src="Images/Circle.png" id="icon">                     
             </li>
           </ul>
         </div>
