--- a/separatepdf.html
+++ b/separatepdf.html
@@ -9,6 +9,17 @@
 </head>
 
 <header>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BCM646Z6NR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-BCM646Z6NR');
+</script>
+
   <img id="logo" src= "Images\MixTooLz Logo.png" align="left" margin="0px" onclick="location.href='index.html'">
   
   <div align="right">
